[tool.poetry]
name = "biu-d20-eda"
version = "0.1.0"
description = ""
authors = ["OferT-FTS <ofer@il-fts.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
poetry-core = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
